--- a/css/contact.css
+++ b/css/contact.css
@@ -7,6 +7,19 @@
 */
 
 /* ==================================== PHẦN BACKGROUND CONTACT ================================== */
+
+/* Nền tối */
+body.dark {
+  .contact-title {
+    color: var(--accent);
+  }
+
+  .social-links a {
+    border: 1px solid var(--accent);
+    color: var(--accent);
+  }
+}
+
 .contact-page {
   padding: 120px 5%;
   background: linear-gradient(180deg, var(--primary) 0%, var() 100%);
@@ -129,13 +142,13 @@
 
 .social-links a {
   display: inline-block;
-  padding: 8px 22px;
+  padding: 10px 30px;
   border-radius: 30px;
-  border: 1px solid var(--accent);
-  color: var(--accent);
+  border: 1px solid var(--primary);
+  color: var(--primary);
   font-size: 14px;
   font-weight: 600;
-  margin-right: 10px;
+  margin-top: 20px;
   transition: all 0.3s ease;
 }
 
